# fusotao-rust-client

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
client-keystore/: Cargo.toml
compose-macros/: Cargo.toml
compose-macros/src/: lib.rs
examples/: example_benchmark_bulk_xt.rs  example_compose_extrinsic_offline.rs  example_event_callback.rs  trader.rs
node-api/: Cargo.toml
node-api/src/: decoder.rs  error.rs  events.rs  lib.rs  metadata.rs  storage.rs
primitives/: Cargo.toml
primitives/src/: extrinsics.rs  lib.rs
src/: lib.rs  utils.rs
src/net/: jsonrpsee_client.rs  mod.rs  tungstenite_client.rs  ws_client.rs
src/net/ws_client/: client.rs  mod.rs
src/rpc/: error.rs  json_req.rs  mod.rs
src/std/: mod.rs  node_metadata.rs
src/std/rpc/: json_req.rs
src/std/rpc/rpsee-client/: mod.rs
src/std/rpc/ws_client/: client.rs  events.rs  mod.rs
src/std/trade/: mod.rs
src/trade/: mod.rs
test-no-std/: Cargo.toml
tutorials/api-client-tutorial/: Cargo.toml
