[package]
name = "substrate-api-client"
version = "0.6.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2021"

[workspace]
members = [
	".",
	"compose-macros",
	"client-keystore",
	"node-api",
]

[dependencies]
async-trait = "0.1.68"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
log = { version = "0.4.17", optional = true }
dashmap = "5.4.0"
tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
frame-metadata = { version = "15.0.0", default-features = false, package = "frame-metadata", features = ["v14"] }
primitive-types = { version = "0.11.1", optional = true, features = ["codec"] }
serde = { version = "1.0.136", optional = true, features = ["derive"] }
serde_json = { version = "1.0.79", optional = true }
thiserror = { version = "1.0.30", optional = true }
ws = { version = "0.9.2", optional = true, features = ["ssl"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ['derive'] }

# Substrate dependencies
sp-core = { version = "6.0.0", default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-version = { version = "5.0.0-dev", optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30", package = "sp-version" }
balances = { version = "4.0.0-dev", optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30", package = "pallet-balances" }
staking = { version = "4.0.0-dev", optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30", package = "pallet-staking" }
system = { version = "4.0.0-dev", optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30", package = "frame-system" }
transaction-payment = { version = "4.0.0-dev", optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30", package = "pallet-transaction-payment" }
sp-rpc = { version = "6.0.0", optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", package = "frame-support", branch = "polkadot-v0.9.30" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
# need to add this for the app_crypto macro
sp-application-crypto = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30", features = ["full_crypto"] }
jsonrpsee = {version = "0.16.2", features = [ "full" ] }

# local deps
ac-compose-macros = { path = "compose-macros", default-features = false }
ac-node-api = { path = "node-api", optional = true }
ac-primitives = { path = "primitives", default-features = false }

# broker
rust_decimal = { version = "1.22" }
x25519-dalek = "1.1.1"
rand = "0.8.5"
rand_core = "0.5"

[dev-dependencies]
env_logger = "0.9.0"
node-template-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-keyring = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
clap = { version = "2.33", features = ["yaml"] }
wabt = "0.10.0"


[features]
default = ["std", "ws-client"]
std = [
	"sp-application-crypto/std",
	"sp-core/std",
	"codec/std",
	"frame-metadata/std",
	"sp-version",
	"balances",
	"system",
	"sp-runtime/std",
	"support/std",
	"sp-std/std",
	"serde/std",
	"serde_json",
	"log",
	"hex/std",
	"primitive-types",
	"thiserror",
	"sp-rpc",
	"transaction-payment/std",
	# local deps
	"ac-compose-macros/std",
	"ac-node-api",
	"ac-primitives/std",
]
ws-client = ["ws"]
staking-xt = ["std", "staking"]

