[package]
name = "test-no-std"
version = "0.6.0"
authors = ["Alain Brenzikofer <alain.brenzikofer@scs.ch>"]
edition = "2021"

[dependencies]
libc = { version = "0.2", default-features = false }

# local dependencies
rust-client-api = { path = "..", default-features = false, package = "fusotao-rust-client" }

# substrate dependencies
sp-io = { version = "5.0.0", default-features = false, features = ["disable_oom", "disable_panic_handler"], git = "https://github.com/paritytech/substrate.git", branch = "master" }
