[package]
name = "api-client-tutorial"
version = "0.6.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2021"

[dependencies]
substrate-api-client = { path = "../..", package = "fusotao-rust-client" }
codec = { package = "parity-scale-codec", features = ["derive"], version = "2.0.0" }

sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12" }
